@@ -4,6 +4,10 @@ NEWS/Changelog
     o   Add readTIFFDirectory() function to read image tags without 
         reading the actual image.
         
+    o   Add limited support for tiled images. Supports 8-, 16- and 32-bit
+        integer and float images with spp=1 or 3. No support for indexed,
+        color map, as.is, or planar format color.
+        
 0.1-5	2013-09-03
     o	bugfix: output of readTIFF(..., as.is=TRUE) with integer
 	values was shifted by one (i.e., stored integer value x
